# apicomtdd

./: Makefile  README.md  docker-compose.yml  pyproject.toml
store/: main.py
store/core/: config.py
store/schemas/: base.py
store/usecases/: product.py
tests/: conftest.py  factories.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
